<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryListProductStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_product_name" />

            <TextView
                android:id="@+id/name"
                style="@style/CategoryListProductStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/product_name" />
        </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryListQuantityStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_quantity" />

            <TextView
                android:id="@+id/quantity"
                style="@style/CategoryListQuantityStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/quantity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryListQuantityStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_sold" />

            <TextView
                android:id="@+id/sold"
                style="@style/CategoryListQuantityStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/sold" />

            <TextView
                style="@style/CategoryListProductStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:text="@string/price" />

            <TextView
                android:id="@+id/price"
                style="@style/CategoryListProductStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="price" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_sell"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/btn"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/sell"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>